MOPP-165 - containers list created by app. Filtering. UI flow to details view. Create test containers.

--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -78,23 +75,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYx-zB-Cs8">
-                                <rect key="frame" x="134.5" y="94" width="106" height="30"/>
                                 <state key="normal" title="Open container"/>
                                 <connections>
                                     <action selector="openContainerButtonPressed:" destination="xAr-n6-KTB" eventType="touchUpInside" id="bWl-Pi-fpl"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l1K-UJ-FLm">
-                                <rect key="frame" x="20" y="154" width="335" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="04M-CC-EKl">
-                                <rect key="frame" x="129.5" y="201" width="116" height="30"/>
                                 <state key="normal" title="Read data action"/>
                                 <connections>
                                     <action selector="readCardActionPressed:" destination="xAr-n6-KTB" eventType="touchUpInside" id="bks-OV-nQ2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmR-J1-smW">
+                                <state key="normal" title="Create test container"/>
+                                <connections>
+                                    <action selector="createContainer:" destination="xAr-n6-KTB" eventType="touchUpInside" id="unt-b6-01o"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -102,10 +102,12 @@
                         <constraints>
                             <constraint firstItem="NYx-zB-Cs8" firstAttribute="top" secondItem="HKj-QD-uCB" secondAttribute="bottom" constant="30" id="0mg-f2-UaA"/>
                             <constraint firstItem="NYx-zB-Cs8" firstAttribute="centerX" secondItem="PqS-PO-TsA" secondAttribute="centerX" id="PnI-xR-SNK"/>
+                            <constraint firstItem="KmR-J1-smW" firstAttribute="top" secondItem="04M-CC-EKl" secondAttribute="bottom" constant="40" id="a3z-PG-qQk"/>
                             <constraint firstItem="l1K-UJ-FLm" firstAttribute="leading" secondItem="PqS-PO-TsA" secondAttribute="leading" constant="20" id="jSm-2d-h6x"/>
                             <constraint firstItem="04M-CC-EKl" firstAttribute="centerX" secondItem="PqS-PO-TsA" secondAttribute="centerX" id="kP0-GT-uxI"/>
                             <constraint firstItem="l1K-UJ-FLm" firstAttribute="top" secondItem="NYx-zB-Cs8" secondAttribute="bottom" constant="30" id="r2G-kg-rYc"/>
                             <constraint firstAttribute="trailing" secondItem="l1K-UJ-FLm" secondAttribute="trailing" constant="20" id="rUy-ZL-phv"/>
+                            <constraint firstItem="KmR-J1-smW" firstAttribute="centerX" secondItem="PqS-PO-TsA" secondAttribute="centerX" id="tC6-36-mQN"/>
                             <constraint firstItem="04M-CC-EKl" firstAttribute="top" secondItem="l1K-UJ-FLm" secondAttribute="bottom" constant="30" id="yde-ka-oP9"/>
                         </constraints>
                     </view>
